SONARRUBY-98 Transform complex use of Collect to ToList